Fixed pricing and bug that css doesnt work on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-@media (min-width: 1024px) {
+/*@media (min-width: 1024px) {*/
   #intro {
     background-attachment: fixed;
   }
@@ -736,7 +736,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   overflow: hidden;
   background-color: #4169e1;
   background-size: cover;
-  padding: 80px 0;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 #download .cta-title {
@@ -749,13 +750,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
 }
 
-@media (min-width: 769px) {
+/*@media (min-width: 769px) {
   #download .cta-btn-container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
   }
-}
+}*/
 
 #download .cta-btn {
   font-family: "Montserrat", sans-serif;
@@ -797,13 +798,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #4169e1;
 }
 
-@media (min-width: 769px) {
-  #download .cta-btn-container {
+/*@media (min-width: 769px) {
+  #download2 .cta-btn-container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
   }
-}
+}*/
 
 #download2 .cta-btn {
   font-family: "Montserrat", sans-serif;
@@ -831,7 +832,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   overflow: hidden;
   background-color: #4169e1;
   background-size: cover;
-  padding: 40px 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 #pmg .cta-title {
@@ -845,13 +847,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
 }
 
-@media (min-width: 769px) {
+/*@media (min-width: 769px) {
   #pmg .cta-btn-container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
   }
-}
+}*/
 
 #pmg .cta-btn {
   font-family: "Montserrat", sans-serif;
@@ -993,7 +995,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #pricing h4 span {
-  color: #8f8fd6;
+  color: #4169e1;
   font-size: 20px;
   top: -20px;
 }
